--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,14 +5,6 @@ COPY package.json package-lock.json ./
 
 RUN npm install
 
-FROM node:18-alpine AS builder
-WORKDIR /app
-
-COPY --from=deps /app/node_modules ./node_modules
-COPY . .
-
-RUN npm run build
-
 FROM node:18-alpine AS dev
 WORKDIR /app
 
@@ -23,10 +15,10 @@ USER $USER:$GROUP
 
 CMD npm install && npm run dev
 
-FROM nginx:1.23-alpine AS prod
+FROM node:18-alpine AS prod
 WORKDIR /app
 
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
 
-EXPOSE 80
-ENV PORT 80
+CMD npm start
