--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,16 @@
+version: "3.8"
+
 services:
   app:
     build:
       context: app
+      target: prod
     ports:
-      - 3000:3000
-    volumes:
-      - ./app:/app
-      - /app/node_modules
+      - "80:80"
+
+  api:
+    build:
+      context: api
+      target: prod
+    ports:
+      - "8080:8080"
