--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,7 +2,7 @@ name: Dev Check
 
 on:
   pull_request:
-    branches: [main]
+    branches: [master]
 
 jobs:
   dev-check:
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, ]
+        node-version: [18.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -21,9 +21,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Fetch last content
-        run: git fetch --no-tags --prune --depth=5 origin main
 
       - name: Install dependencies
         run: npm ci
