--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,8 @@
     "lint": "npx eslint ./src && prettier -c ./src"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
