--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "eslint": "^8.41.0",
     "prettier": "^2.8.8"
+  },
+  "dependencies": {
+    "vue": "^3.3.4"
   }
 }
