--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "lint": "npx eslint ./src && prettier -c ./src"
   },
   "dependencies": {
+    "prettier": "^2.8.8",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
   },
