--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "lint": "npx eslint ./src && prettier -c ./src"
   },
   "dependencies": {
+    "socket.io": "^4.6.2",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
   },
