--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "socket.io-client": "^4.6.2",
     "prettier": "^2.8.8",
+    "vue": "^3.2.47",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
