--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,9 @@
     "lint": "npx eslint ./src && prettier -c ./src"
   },
   "dependencies": {
-    "socket.io-client": "^4.6.2",
+    "pinia": "^2.1.4",
     "prettier": "^2.8.8",
+    "socket.io-client": "^4.6.2",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2"
   },
