--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^2.8.8"
   },
   "dependencies": {
-    "eslint-config-prettier": "^8.8.0"
+    "eslint-config-prettier": "^8.8.0",
+    "sqlite3": "^5.1.6"
   }
 }
