--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
     "prettier": "^2.8.8",
     "socket.io-client": "^4.6.2",
     "vue": "^3.2.47",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vue-stone": "file:"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
