Fix : Added eslint-config-prettier
Signed-off-by: LeoBruant <bruantleo@gmail.com>

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "eslint": "^8.41.0",
     "prettier": "^2.8.8"
+  },
+  "dependencies": {
+    "eslint-config-prettier": "^8.8.0"
   }
 }
