--- a/api/package.json
+++ b/api/package.json
@@ -20,8 +20,7 @@
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.0",
-    "socket.io": "^4.6.2",
-    "sqlite": "^5.0.1"
+    "socket.io": "^4.6.2"
   },
   "description": "",
   "devDependencies": {
