--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ SALT=salt
 JWT_SECRET=secret
 DATABASE_URL=postgres://user:password@localhost:5432/db
 VITE_API_URI=http://localhost:8080
+VITE_STRIPE_PK=pk_test_xxx
+STRIPE_SK=sk_test_xxx
