--- a/api/package.json
+++ b/api/package.json
@@ -20,7 +20,8 @@
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.0",
-    "socket.io": "^4.6.2"
+    "socket.io": "^4.6.2",
+    "stripe": "^12.14.0"
   },
   "description": "",
   "devDependencies": {
