--- a/app/package.json
+++ b/app/package.json
@@ -9,10 +9,13 @@
     "lint": "npx eslint ./src && prettier -c ./src"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.54.1",
+    "@vue-stripe/vue-stripe": "^4.5.0",
     "socket.io-client": "^4.6.2",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2",
-    "vue-stone": "file:"
+    "vue-stone": "file:",
+    "vue-stripe-js": "^1.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
