--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
+# APP
 VUE_APP_API_URI=http://localhost:8080
+VITE_API_URI=http://localhost:8080
+VITE_STRIPE_PK=pk_test_xxx
+
+# API
 SALT=salt
 JWT_SECRET=secret
 DATABASE_URL=postgres://user:password@localhost:5432/db
-VITE_API_URI=http://localhost:8080
-VITE_STRIPE_PK=pk_test_xxx
 STRIPE_SK=sk_test_xxx
+WEBHOOK_SECRET=whsec_xxx
