--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -32,5 +32,16 @@ services:
       POSTGRES_USER: user
       POSTGRES_DB: db
 
+  mongo:
+    image: mongo
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
+    volumes:
+      - mongo:/data/db
+
 volumes:
   db:
+  mongo:
