--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "dev": "node --watch src/main.js",
     "start": "node src/main.js",
     "lint": "npx eslint ./src && prettier -c ./src",
-    "test": "vitest"
+    "test": "vitest",
+    "fixtures": "node src/fixtures/index.js"
   },
   "keywords": [],
   "author": "",
