--- a/.env.exemple
+++ b/.env.exemple
@@ -1,5 +1,11 @@
-VUE_APP_API_URI=http://localhost:8080
+# APP
+VITE_API_URI=http://localhost:8080
+VITE_STRIPE_PK=pk_test_xxx
+
+# API
 SALT=salt
 JWT_SECRET=secret
 DATABASE_URL=postgres://user:password@localhost:5432/db
-VITE_API_URI=http://localhost:8080
+MONGO_URL=mongodb://root:password@localhost:27017/
+STRIPE_SK=sk_test_xxx
+WEBHOOK_SECRET=whsec_xxx
