--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -11,6 +11,9 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
+ARG VITE_API_URI
+ARG VITE_STRIPE_PK
+
 RUN npm run build
 
 FROM node:18-alpine AS dev
@@ -26,6 +29,7 @@ CMD npm install && npm run dev
 FROM nginx:1.23-alpine AS prod
 WORKDIR /app
 
+COPY docker/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY --from=builder /app/dist /usr/share/nginx/html
 
 EXPOSE 80
