--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ services:
         VITE_API_URI: ${VITE_API_URI}
         VITE_STRIPE_PK: ${VITE_STRIPE_PK}
     labels:
-      - "traefik.http.routers.matrix.rule=Host(`vuestone.quozul.dev`)"
-      - "traefik.http.routers.matrix.tls=true"
-      - "traefik.http.routers.matrix.tls.certresolver=myresolver"
-      - "traefik.http.services.matrix.loadbalancer.server.port=80"
-      - "traefik.http.routers.matrix.tls.domains[0].main=vuestone.quozul.dev"
+      - "traefik.http.routers.vuestone.rule=Host(`vuestone.quozul.dev`)"
+      - "traefik.http.routers.vuestone.tls=true"
+      - "traefik.http.routers.vuestone.tls.certresolver=myresolver"
+      - "traefik.http.services.vuestone.loadbalancer.server.port=80"
+      - "traefik.http.routers.vuestone.tls.domains[0].main=vuestone.quozul.dev"
     env_file: .env
     #ports:
     #  - "8089:80"
