--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: "3.8"
 
 services:
   api:
-    hostname: api
     build:
       context: .
       target: prod
@@ -15,36 +14,28 @@ services:
     depends_on:
       - mongo
       - postgres
-    networks:
-      - traefik
     labels:
       - "traefik.http.routers.vuestone.rule=Host(`vuestone.quozul.dev`)"
-      - "traefik.http.routers.vuestone.tls=true"
       - "traefik.http.routers.vuestone.tls.certresolver=myresolver"
-      - "traefik.http.services.vuestone.loadbalancer.server.port=80"
       - "traefik.http.routers.vuestone.tls.domains[0].main=vuestone.quozul.dev"
+      - "traefik.http.routers.vuestone.tls=true"
+      - "traefik.http.services.vuestone.loadbalancer.server.port=8080"
 
   postgres:
-    hostname: postgres
     extends:
       file: docker-compose.dev.yml
       service: postgres
-    networks:
-      - traefik
 
   mongo:
-    hostname: mongo
     extends:
       file: docker-compose.dev.yml
       service: mongo
-    networks:
-      - traefik
 
 volumes:
   db:
   mongo:
 
 networks:
-  traefik:
+  default:
     external: true
     name: traefik
