--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       args:
         VITE_API_URI: ${VITE_API_URI}
         VITE_STRIPE_PK: ${VITE_STRIPE_PK}
+        VITE_SOCKET_URL: ${VITE_SOCKET_URL}
     expose:
       - 8080
     env_file: .env
