--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
 # APP
-VUE_APP_API_URI=http://localhost:8080
 VITE_API_URI=http://localhost:8080
+VITE_SOCKET_URL=ws://localhost:8080/
 VITE_STRIPE_PK=pk_test_xxx
 
 # API
-SALT=salt
-JWT_SECRET=secret
 DATABASE_URL=postgres://user:password@localhost:5432/db
+JWT_SECRET=secret
+MONGO_URL=mongodb://root:password@localhost:27017/
+SALT=salt
 STRIPE_SK=sk_test_xxx
 WEBHOOK_SECRET=whsec_xxx
