--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,8 @@
     "@stripe/stripe-js": "^1.54.1",
     "socket.io-client": "^4.6.2",
     "vue": "^3.2.47",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
