--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # APP
-VITE_API_URI=http://localhost:8080
+VITE_API_URI=http://localhost:8080/api
 VITE_SOCKET_URL=ws://localhost:8080/
 VITE_STRIPE_PK=pk_test_xxx
 
@@ -10,3 +10,7 @@ MONGO_URL=mongodb://root:password@localhost:27017/
 SALT=salt
 STRIPE_SK=sk_test_xxx
 WEBHOOK_SECRET=whsec_xxx
+
+# Fixtures
+INIT_EMAIL=admin@vuestone.com
+INIT_PASSWORD=Test1234&
