--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
+# If running in production, remember to change "localhost" to the actual hostnames
+
 # APP
 VITE_API_URI=http://localhost:8080/api
 VITE_SOCKET_URL=ws://localhost:8080/
 VITE_STRIPE_PK=pk_test_xxx
 
 # API
+FRONT_URL=http://localhost:3000
 DATABASE_URL=postgres://user:password@localhost:5432/db
 JWT_SECRET=secret
 MONGO_URL=mongodb://root:password@localhost:27017/
